// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<comment> demo: render [align] correctly 1`] = `
"<div class=\\"sd-comment\\">
  <div class=\\"sd-comment-avatar\\">
    <div class=\\"sd-avatar sd-avatar-circle\\"><span class=\\"sd-avatar-text\\"><img alt=\\"avatar\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\"></span>
      <!--v-if-->
    </div>
  </div>
  <div class=\\"sd-comment-inner\\">
    <div class=\\"sd-comment-inner-content\\">
      <div class=\\"sd-comment-title sd-comment-title-align-right\\"><span class=\\"sd-comment-author\\"><span>Balzac</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
      <div class=\\"sd-comment-content\\">
        <div> A design is a plan or specification for the construction of an object or system or for the implementation of an activity or process, or the result of that plan or specification in the form of a prototype, product or process. </div>
      </div>
      <div class=\\"sd-comment-actions sd-comment-actions-align-right\\"><span class=\\"action\\"><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-heart\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M38.083 12.912a9.929 9.929 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.929 9.929 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z\\"></path></svg></span> 83</span><span class=\\"action\\"><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-star\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z\\"></path></svg></span> 3</span><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<comment> demo: render [basic] correctly 1`] = `
"<div class=\\"sd-comment\\">
  <div class=\\"sd-comment-avatar\\">
    <div class=\\"sd-avatar sd-avatar-circle\\"><span class=\\"sd-avatar-text\\"><img alt=\\"avatar\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\"></span>
      <!--v-if-->
    </div>
  </div>
  <div class=\\"sd-comment-inner\\">
    <div class=\\"sd-comment-inner-content\\">
      <div class=\\"sd-comment-title sd-comment-title-align-left\\"><span class=\\"sd-comment-author\\"><span>Socrates</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
      <div class=\\"sd-comment-content\\"><span>Comment body content.</span></div>
      <div class=\\"sd-comment-actions sd-comment-actions-align-left\\"><span class=\\"action\\"><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-heart\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M38.083 12.912a9.929 9.929 0 0 1 .177 13.878l-.177.18L25.76 39.273c-.972.97-2.548.97-3.52 0L9.917 26.971l-.177-.181a9.929 9.929 0 0 1 .177-13.878c3.889-3.883 10.194-3.883 14.083 0 3.889-3.883 10.194-3.883 14.083 0Z\\"></path></svg></span> 83</span><span class=\\"action\\"><span><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-star\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M22.552 6.908a.5.5 0 0 1 .896 0l5.02 10.17a.5.5 0 0 0 .376.274l11.224 1.631a.5.5 0 0 1 .277.853l-8.122 7.916a.5.5 0 0 0-.143.443l1.917 11.178a.5.5 0 0 1-.726.527l-10.038-5.278a.5.5 0 0 0-.466 0L12.73 39.9a.5.5 0 0 1-.726-.527l1.918-11.178a.5.5 0 0 0-.144-.443l-8.122-7.916a.5.5 0 0 1 .278-.853l11.223-1.63a.5.5 0 0 0 .376-.274l5.02-10.17Z\\"></path></svg></span> 3</span><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<comment> demo: render [editor] correctly 1`] = `
"<div class=\\"sd-comment\\">
  <div class=\\"sd-comment-avatar\\"><img src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\" alt=\\"comment-avatar\\"></div>
  <div class=\\"sd-comment-inner\\">
    <div class=\\"sd-comment-inner-content\\">
      <div class=\\"sd-comment-title sd-comment-title-align-right\\"><span class=\\"sd-comment-author\\"><span>Balzac</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
      <div class=\\"sd-comment-content\\"><span>A design is a plan or specification for the construction of an object
          or system or for the implementation of an activity or process, or the
          result of that plan or specification in the form of a prototype,
          product or process.</span></div>
      <div class=\\"sd-comment-actions sd-comment-actions-align-right\\"><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
    </div>
    <div class=\\"sd-comment-inner-comment\\">
      <div class=\\"sd-comment\\">
        <div class=\\"sd-comment-avatar\\"><img src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\" alt=\\"comment-avatar\\"></div>
        <div class=\\"sd-comment-inner\\">
          <div class=\\"sd-comment-inner-content\\">
            <!--v-if-->
            <div class=\\"sd-comment-content\\"><span class=\\"sd-input-wrapper\\"><!----><input class=\\"sd-input sd-input-size-medium\\" type=\\"text\\" placeholder=\\"Here is you content.\\" value=\\"\\"><!----><!----></span></div>
            <div class=\\"sd-comment-actions sd-comment-actions-align-right\\"><button class=\\"sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
                <!--v-if--> Cancel
              </button><button class=\\"sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal\\" type=\\"button\\">
                <!--v-if--> Reply
              </button></div>
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<comment> demo: render [nest] correctly 1`] = `
"<div class=\\"sd-comment\\">
  <div class=\\"sd-comment-avatar\\"><img src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\" alt=\\"comment-avatar\\"></div>
  <div class=\\"sd-comment-inner\\">
    <div class=\\"sd-comment-inner-content\\">
      <div class=\\"sd-comment-title sd-comment-title-align-left\\"><span class=\\"sd-comment-author\\"><span>Socrates</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
      <div class=\\"sd-comment-content\\"><span>Comment body content.</span></div>
      <div class=\\"sd-comment-actions sd-comment-actions-align-left\\"><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
    </div>
    <div class=\\"sd-comment-inner-comment\\">
      <div class=\\"sd-comment\\">
        <div class=\\"sd-comment-avatar\\"><img src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/9eeb1800d9b78349b24682c3518ac4a3.png~tplv-uwbnlip3yd-webp.webp\\" alt=\\"comment-avatar\\"></div>
        <div class=\\"sd-comment-inner\\">
          <div class=\\"sd-comment-inner-content\\">
            <div class=\\"sd-comment-title sd-comment-title-align-left\\"><span class=\\"sd-comment-author\\"><span>Balzac</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
            <div class=\\"sd-comment-content\\"><span>Comment body content.</span></div>
            <div class=\\"sd-comment-actions sd-comment-actions-align-left\\"><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
          </div>
          <div class=\\"sd-comment-inner-comment\\">
            <div class=\\"sd-comment\\">
              <div class=\\"sd-comment-avatar\\"><img src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/8361eeb82904210b4f55fab888fe8416.png~tplv-uwbnlip3yd-webp.webp\\" alt=\\"comment-avatar\\"></div>
              <div class=\\"sd-comment-inner\\">
                <div class=\\"sd-comment-inner-content\\">
                  <div class=\\"sd-comment-title sd-comment-title-align-left\\"><span class=\\"sd-comment-author\\"><span>Austen</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
                  <div class=\\"sd-comment-content\\"><span>Reply content</span></div>
                  <div class=\\"sd-comment-actions sd-comment-actions-align-left\\"><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
                </div>
                <!--v-if-->
              </div>
            </div>
            <div class=\\"sd-comment\\">
              <div class=\\"sd-comment-avatar\\"><img src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/3ee5f13fb09879ecb5185e440cef6eb9.png~tplv-uwbnlip3yd-webp.webp\\" alt=\\"comment-avatar\\"></div>
              <div class=\\"sd-comment-inner\\">
                <div class=\\"sd-comment-inner-content\\">
                  <div class=\\"sd-comment-title sd-comment-title-align-left\\"><span class=\\"sd-comment-author\\"><span>Plato</span></span><span class=\\"sd-comment-datetime\\"><span>1 hour</span></span></div>
                  <div class=\\"sd-comment-content\\"><span>Reply content</span></div>
                  <div class=\\"sd-comment-actions sd-comment-actions-align-left\\"><span class=\\"action\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-message\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M15 20h18m-18 9h9M7 41h17.63C33.67 41 41 33.67 41 24.63V24c0-9.389-7.611-17-17-17S7 14.611 7 24v17Z\\"></path></svg> Reply </span></div>
                </div>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
